migrated PhotoGroupPost#photoUrlsPages to LinkedList<Queue<String>>